--- a/group/styles/styles.css
+++ b/group/styles/styles.css
@@ -25,7 +25,7 @@
   --link-hover-color: #003456;
   --grey-color: #6a6a6a;
   --dallas: #162c55;
-  --color-chicago-black: #000000;
+  --color-chicago-black: #000;
   --color-grey-700: #707275;
 
   /* fonts */
